# Provisioning-Tool

./: .gitignore  README.md  index.html  package.json
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: lib.rs  main.rs
