[package]
name = "provisioning-tool"
version = "0.1.0"
description = "A simple provisioning tool"
authors = ["TimelessOS", "EaterMiner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "provisioning_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zbus_systemd = { version = "0.25700.0", features = [ "home1", "hostname1", "import1", "locale1", "login1", "systemd1", "timedate1" ] }
libcrypt-rs = "0.1"
rand = "0.8"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
incremental = true
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = 3 # Prioritizes small binary size. Use `3` if you prefer speed.
#strip = true # Ensures debug symbols are removed.
